Fix margins on mobile

--- a/src/Landing/index.css
+++ b/src/Landing/index.css
@@ -47,26 +47,25 @@
 #info-title{
     font-size:250%;
     float:left;
-    margin-bottom:1em;
+    margin-bottom:0.5em;
 }
 
 #info-text{
     float:left;
     margin-right:50%;
-    margin-bottom:5em;
+    margin-bottom:15em;
 }
-
 
 #info-title1{
     font-size:250%;
     float:right;
-    margin-bottom:1em;
+    margin-bottom:0.5em;
 }
 
 #info-text1{
     float:right;
     margin-left:50%;
-    margin-bottom:5em;
+    margin-bottom:15em;
 }
 @media only screen and (max-width: 768px) {
 
@@ -74,17 +73,23 @@
 	height:38em;
 	}
 
+    .display-3{
+	margin-top:2em;
+    }
+
     #info-title{
 	float:none;
+	text-align: center !important;
 	}
 
     #info-text{
 	text-align: center !important;
-	margin: 0em 0em 5em 0em;
+	margin: 0em 0em 7em 0em;
 	}
 
     #info-title1{
 	float:none;
+	text-align: center !important;
 	}
 
     #info-text1{
